tests/tooling/fixtures/native/recovery/negative/negative_assignment_update_unknown_target.objc3
// Expected diagnostic code(s): O3S214.
module NegativeAssignmentUpdateUnknownTarget;

fn main() -> i32 {
  value++;
  return 0;
}